completed blog for everything

--- a/_notebooks/2025-4-20-cyber-blog.ipynb
+++ b/_notebooks/2025-4-20-cyber-blog.ipynb
@@ -24,7 +24,94 @@
    "cell_type": "markdown",
    "id": "ccbb465f",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Cybersecurity Careers and Insights – Notes**\n",
+    "\n",
+    "**David – Government and Law Enforcement in Cybersecurity**\n",
+    "\n",
+    "- Works in government cybersecurity, focusing on tracking individuals and threats\n",
+    "\n",
+    "- Concerned about ransomware attacks harming local companies\n",
+    "\n",
+    "- Although he dislikes computers, he is passionate about international cyber law\n",
+    "\n",
+    "- Focuses on legal boundaries—whether actions in cyberspace break laws\n",
+    "\n",
+    "- Believes skilled hackers are valuable for testing and improving security\n",
+    "\n",
+    "- Career goal is to track and stop cybercriminals\n",
+    "\n",
+    "- Recommends becoming a strong leader, staying organized, and being well-liked\n",
+    "\n",
+    "- Learned quickly after realizing that arrogance holds you back\n",
+    "\n",
+    "- Thinks AI can be trained using code, not just natural language\n",
+    "\n",
+    "- Values relationships with smart, skilled people\n",
+    "\n",
+    "- Says the best cybersecurity professionals are curious, passionate, and persistent\n",
+    "\n",
+    "- Suggests starting with a free CC cybersecurity certification to build skills\n",
+    "\n",
+    "**Victor Black – Cybersecurity CEO and Industry Leader**\n",
+    "\n",
+    "- Runs a cybersecurity company and works with multiple partners\n",
+    "\n",
+    "- Concerned about AI being used to create “ransomware as a service”\n",
+    "\n",
+    "- Sees ethical hacking as a way to improve security and AI safety\n",
+    "\n",
+    "- Defines “zero day” as a security flaw with no current fix or patch\n",
+    "\n",
+    "- Gives example: pulling updates from unverified cloud sources\n",
+    "\n",
+    "- Compares hiring hackers to hiring a burglar to test your home’s security\n",
+    "\n",
+    "- Notes cybersecurity has changed, while outdated tech like Java hasn’t\n",
+    "\n",
+    "- Recommends learning IT basics before jumping into cybersecurity\n",
+    "\n",
+    "- Stresses that people and teamwork are just as important as tech\n",
+    "\n",
+    "- Predicts rapid growth in healthcare IT and AI-focused cybersecurity roles\n",
+    "\n",
+    "- Recommends staying current with new tech trends and threats\n",
+    "\n",
+    "**Tricia – Cybersecurity in Business and Finance**\n",
+    "\n",
+    "- Works in cybersecurity to stop financial data theft and internal threats\n",
+    "\n",
+    "- Has a background in investigating companies that steal data\n",
+    "\n",
+    "- Helps file lawsuits to hold cybercriminals accountable\n",
+    "\n",
+    "- Believes people don’t realize how valuable and vulnerable their data is\n",
+    "\n",
+    "- Supports the use of hackers to test security systems\n",
+    "\n",
+    "- Recommends reading books to build a strong computer foundation\n",
+    "\n",
+    "- Emphasizes learning IT fundamentals before moving into cyber defense\n",
+    "\n",
+    "- Says leadership and business knowledge are important in cybersecurity\n",
+    "\n",
+    "- Encourages blending business skills with technical security knowledge\n",
+    "\n",
+    "- Stresses the need to understand how to secure code\n",
+    "\n",
+    "- Suggests keeping up with global cyber news and trends\n",
+    "\n",
+    "- Advises learning business language to fit in but also stand out in meetings\n",
+    "\n",
+    "**Reflection**\n",
+    "\n",
+    "- Cybersecurity is more important than most people realize\n",
+    "\n",
+    "- It protects personal data, businesses, and national systems\n",
+    "\n",
+    "- Strong cybersecurity experts are curious, up-to-date, hardworking, and great with people\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
