--- a/_notebooks/Foundation/2025-4-11-stimulations.ipynb
+++ b/_notebooks/Foundation/2025-4-11-stimulations.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -232,6 +232,17 @@
     "        print(\"You lose!\")\n",
     "\n",
     "play_rock_paper_scissors()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Part of Popcorn Hack 2**\n",
+    "\n",
+    "- rock - lose\n",
+    "- scissors - win\n",
+    "- scissors loss "
    ]
   },
   {
