--- a/_notebooks/2025-4-20-cyber-blog.ipynb
+++ b/_notebooks/2025-4-20-cyber-blog.ipynb
@@ -112,6 +112,14 @@
     "- Strong cybersecurity experts are curious, up-to-date, hardworking, and great with people\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c10bbf2",
+   "metadata": {},
+   "source": [
+    "  <img src=\"../images/credit.png\" alt=\"Extra Credit\" width=\"700\">"
+   ]
   }
  ],
  "metadata": {
