homework hacks for big o

--- a/_notebooks/Foundation/2025-4-21-BigO-Algoritms.ipynb
+++ b/_notebooks/Foundation/2025-4-21-BigO-Algoritms.ipynb
@@ -122,6 +122,102 @@
     "\n",
     "d) Linear Time"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8985e45d",
+   "metadata": {},
+   "source": [
+    "**Homework Hack**\n",
+    "Write a function that takes the following inputs:\n",
+    "\n",
+    "An array:\n",
+    "arr = [5, 10, 15, 20, 25]\n",
+    "A string representing the time complexity:\n",
+    "\"constant\", \"linear\", \"quadratic\", etc.\n",
+    "The function should perform operations on the array based on the given time complexity. For example:\n",
+    "\n",
+    "If the string is \"constant\", return the first item of the array.\n",
+    "If the string is \"linear\", print all the items in the array.\n",
+    "If the string is \"quadratic\", print all pairs of items in the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "35fc0bfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Constant: 5\n",
+      "\n",
+      "Linear:\n",
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "\n",
+      "Quadratic:\n",
+      "(5, 5)\n",
+      "(5, 10)\n",
+      "(5, 15)\n",
+      "(5, 20)\n",
+      "(5, 25)\n",
+      "(10, 5)\n",
+      "(10, 10)\n",
+      "(10, 15)\n",
+      "(10, 20)\n",
+      "(10, 25)\n",
+      "(15, 5)\n",
+      "(15, 10)\n",
+      "(15, 15)\n",
+      "(15, 20)\n",
+      "(15, 25)\n",
+      "(20, 5)\n",
+      "(20, 10)\n",
+      "(20, 15)\n",
+      "(20, 20)\n",
+      "(20, 25)\n",
+      "(25, 5)\n",
+      "(25, 10)\n",
+      "(25, 15)\n",
+      "(25, 20)\n",
+      "(25, 25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def perform_operation(arr, complexity):\n",
+    "    if complexity == \"constant\":\n",
+    "        # O(1) - Access first item\n",
+    "        return arr[0]\n",
+    "    \n",
+    "    elif complexity == \"linear\":\n",
+    "        # O(n) - Print all items\n",
+    "        for item in arr:\n",
+    "            print(item)\n",
+    "    \n",
+    "    elif complexity == \"quadratic\":\n",
+    "        # O(n^2) - Print all unique pairs\n",
+    "        for i in range(len(arr)):\n",
+    "            for j in range(len(arr)):\n",
+    "                print(f\"({arr[i]}, {arr[j]})\")\n",
+    "    \n",
+    "    else:\n",
+    "        return \"Unsupported time complexity\"\n",
+    "\n",
+    "# Example usage:\n",
+    "arr = [5, 10, 15, 20, 25]\n",
+    "print(\"Constant:\", perform_operation(arr, \"constant\"))\n",
+    "print(\"\\nLinear:\")\n",
+    "perform_operation(arr, \"linear\")\n",
+    "print(\"\\nQuadratic:\")\n",
+    "perform_operation(arr, \"quadratic\")\n"
+   ]
   }
  ],
  "metadata": {
