--- a/_notebooks/Foundation/2025-4-22-graphs-problems.ipynb
+++ b/_notebooks/Foundation/2025-4-22-graphs-problems.ipynb
@@ -110,6 +110,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b121234",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2293c1e5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "212b9a0f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "696ff39f",
    "metadata": {},
    "source": [
@@ -117,17 +135,17 @@
     "\n",
     "**True or False Questions**\n",
     "\n",
-    "**1. In a directed graph, an edge from node A to node B implies that there is always a corresponding edge from node B to node A.**  \n",
+    "1. In a directed graph, an edge from node A to node B implies that there is always a corresponding edge from node B to node A.  \n",
     "**False**  \n",
     "In a directed graph, edges have direction. If there is an edge from A to B, that does **not** mean there is one from B to A unless it is added separately.\n",
     "\n",
     "\n",
-    "**2. Heuristics always provide faster solutions than exact algorithms, but they may sacrifice accuracy for speed.**  \n",
+    "2. Heuristics always provide faster solutions than exact algorithms, but they may sacrifice accuracy for speed.\n",
     "**True**  \n",
     "Heuristics are used to get quick solutions that are \"good enough.\" They are faster, but sometimes not completely accurate compared to exact algorithms.\n",
     "\n",
     "\n",
-    "**3. While heuristic algorithms like the Nearest Neighbor algorithm can significantly reduce the computational time for TSP, they can never guarantee an optimal solution, and the gap between the heuristic solution and the optimal solution can grow exponentially as the number of cities increases.**  \n",
+    "3. While heuristic algorithms like the Nearest Neighbor algorithm can significantly reduce the computational time for TSP, they can never guarantee an optimal solution, and the gap between the heuristic solution and the optimal solution can grow exponentially as the number of cities increases.\n",
     "**True**  \n",
     "Heuristic algorithms like Nearest Neighbor are faster but can't promise the best answer. As you add more cities, the difference between the quick answer and the best answer can get much bigger.\n",
     "\n",
