--- a/_notebooks/Foundation/2025-06-09-N@TM-summary.ipynb
+++ b/_notebooks/Foundation/2025-06-09-N@TM-summary.ipynb
@@ -71,7 +71,7 @@
     "Presenting Flocker in a public setting gave me new insights:\n",
     "\n",
     "- **Technical Communication:** I had to adapt my explanations for people with different technical backgrounds.  \n",
-    "- **Live Debugging:** When the internet briefly disconnected, I calmly explained how local testing still worked using `localhost`.  \n",
+    "- **Live Debugging:** When the internet briefly disconnected, I calmly explained how testing worked using deployment.  \n",
     "- **Team Coordination:** We divided roles — one person ran the demo, another answered frontend questions, and I focused on backend and socket logic.  \n",
     "- **User Feedback:** Observing users helped me realize which parts of the UI needed clarification, like how to join a room.\n",
     "\n",
